# wema-hackaholics7-0-hackathon-uyo-project-team-nova-builders

./: .gitignore  render.yaml
backend/core/: config.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AiChat.tsx  Card.tsx  FadeUp.tsx  FoidWordmark.tsx  IncomeExpenseChart.tsx  PageTransition.tsx  ProtectedRoute.tsx  RemixIcon.tsx  SegmentedTabs.tsx  Sidebar.tsx  StatCard.tsx  Topbar.tsx
frontend/src/components/landing/: LandingFooter.tsx  LandingNav.tsx
frontend/src/contexts/: AuthContext.tsx  CredentialContext.tsx
frontend/src/layouts/: DashboardLayout.tsx
frontend/src/pages/: LandingPage.tsx  LoginPage.tsx  SignupPage.tsx
frontend/src/pages/auth/: LoginPage.tsx  SignupPage.tsx
frontend/src/pages/dashboard/: AICreditWalletPage.tsx  BusinessLedgerPage.tsx  ConnectedBankPage.tsx  ConsentPage.tsx  LedgerHistoryPage.tsx  MyIdentityPage.tsx  OverviewPage.tsx  ProfileSettingsPage.tsx  ReportsPage.tsx  (+1 more)
frontend/src/styles/: global.css  identity.css  layout.css  overview.css
frontend/src/types/: foid.ts
openbanking/: .dockerignore  .env.example  Dockerfile  foid_openbanking.db  main.py  phases.txt  pyproject.toml  render.yaml  stream_watch.py
openbanking/data/: mock_feed.json  seed.py  store.py
openbanking/db/: __init__.py  base.py  models.py
openbanking/routers/: consent.py  credentials.py  demo.py  events.py  kyc.py
openbanking/services/: credential_issuer.py  feed_simulator.py  notifier.py  ob_poller.py  trigger_engine.py
